Added Rows For Magic Bricks And Square Yards

--- a/form/unit-template.html
+++ b/form/unit-template.html
@@ -1,3 +1,4 @@
+<!--<md-table-container id="table_{{$index+1}}" flex ng-repeat="(key1,value1) in xyz.units">-->
 <md-table-container id="table_{{$index+1}}" flex ng-repeat="(key1,value1) in xyz.units">
    <div class="center unit-tab" ng-click="show($index+1)">
       <h2>Unit {{$index+1}}</h2>
@@ -12,7 +13,7 @@
             <th md-column>JSON Object</th>
             <th md-column class="primary-col">99 Acres</th>
             <th md-column>Magic Bricks</th>
-            <th md-column class="primary-col">XYZ</th>
+            <th md-column class="primary-col">Square Yards</th>
             <th md-column>Roofpik</th>
          </tr>
       </thead>
