--- a/form/form.html
+++ b/form/form.html
@@ -1,7 +1,44 @@
 <div ng-include="'navigation/header.html'"></div>
-<input type="text" ng-model="url">
-<button ng-click="sendUrl(url)">send url</button>
+<form layout="column">
+   <md-card>
+      <md-toolbar>
+         <div class="md-toolbar-tools">
+            <h2>Input</h2>
+         </div>
+      </md-toolbar>
+      <md-card-content>
+         <div layout="row" flex>
+            <md-input-container flex="80">
+               <label>99 Acres URL</label>
+               <input type="text" ng-model="data.acres99">
+            </md-input-container> 
+            <md-button ng-disabled="!data.acres99"  ng-click="submitUrl(data.acres99, 'acres99')" flex="20" class="md-primary md-raised">Submit</md-button>
+         </div>
+         <div layout="row" flex>
+            <md-input-container flex="80">
+               <label>Magic Bricks URL</label>
+               <input type="text" ng-model="data.magicBricks">
+            </md-input-container> 
+            <md-button ng-disabled="!data.magicBricks"  ng-click="submitUrl(data.magicBricks, 'magicBricks')" flex="20" class="md-primary md-raised">Submit</md-button>
+         </div>
+         <div layout="row" flex>
+            <md-input-container flex="80">
+               <label>Sqaure Yards URL</label>
+               <input type="text" ng-model="data.squareYards">
+            </md-input-container> 
+            <md-button ng-disabled="!data.squareYards"  ng-click="submitUrl(data.squareYards, 'squareYards')" flex="20" class="md-primary md-raised">Submit</md-button>
+         </div>
+      </md-card-content>
+   </md-card>
+</form>
 <form layout="column" name="marketingForm">
+   <md-card>
+      <md-toolbar>
+         <div class="md-toolbar-tools">
+            <h3>Data</h3>
+         </div>
+      </md-toolbar>
+   </md-card>
    <div ng-include="'form/table-one.html'"></div>
    <div class="center">
       <h1>Units</h1>
