--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
    <!--<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>-->
    <!--<script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>-->
 
+   <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
+   <script>
+   // Initialize Firebase
+   var config = {
+      apiKey: "AIzaSyDvUxGikQTruJKTOnklKSl4SEOf6fdEB18",
+      authDomain: "marketingform-b9148.firebaseapp.com",
+      databaseURL: "https://marketingform-b9148.firebaseio.com",
+      storageBucket: "marketingform-b9148.appspot.com",
+   };
+   firebase.initializeApp(config);
+   </script>
+
    <!-- App -->
    <script src="lib/app.js"></script>
    <script src="lib/config.js"></script>
